# aa-gateway

./: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/auth/: mod.rs
backend/src/database/: mod.rs  schema.rs
backend/src/mcp/: mod.rs  service.rs
backend/src/models/: cli_tool.rs  mcp.rs  mod.rs  provider.rs  proxy.rs
backend/src/providers/: mod.rs  service.rs
backend/src/proxy/: circuit_breaker.rs  forwarder.rs  http_client.rs  mod.rs  router.rs  server.rs  types.rs
backend/src/server/: cli_tools.rs  mcp.rs  mod.rs  providers.rs  proxy.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: cliTools.ts  client.ts  mcp.ts  providers.ts  proxy.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: CliTools.tsx  Dashboard.tsx  McpServers.tsx  Providers.tsx  ProxySettings.tsx  Settings.tsx
frontend/src/types/: index.ts  mcp.ts  provider.ts  proxy.ts
