[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "AI Gateway - Server-side AI API management tool"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# HTTP client (for proxy)
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "socks", "gzip"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"
dirs = "5.0"

# TOML/JSON/YAML parsing
toml = "0.8"
serde_yaml = "0.9"

# Shell expansion for paths
shellexpand = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
